--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Front page</title>
     <link rel="stylesheet" href="Data/css/stylesindex.css">
+    <style>
+        body {
+            background-image: url('Data/Photos/Pngtree.jpg');
+            background-size: 100%; /* Ensures the image covers the entire background */
+            background-position: center; /* Centers the image */
+            background-repeat: repeat; /* Prevents repeating the image */
+            margin: 0; /* Removes default margin */
+            height: 100vh; /* Ensures the body takes up the entire viewport height */
+        }
+    </style>
 </head>
 <body>
     <div class="container">
