--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <button type="submit" class="start-btn">Login</button>
             <p id="loginSuccessMessage" style="display: none; color: green;">Login successful! Redirecting...</p>
             
-            <p>ajdhajd</p>
-            <p>ajdhajd</p>
+            <p>Username: Your email address </p>
+            <p>Password: Date when you said Your Sweet YES!</p>
 
         </form>
         <audio id="backgroundMusic" loop>
