--- a/page3.html
+++ b/page3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Data/css/stylepage3.css">
     <style>
         body {
-            background-image: url('Data/Photos/Green\ Shadow\ Aesthetic.jpg');
+            background-image: url('Data/Photos/pinkbg.jpg');
             background-size: 100%; /* Ensures the image covers the entire background */
             background-position: center; /* Centers the image */
             background-repeat: repeat; /* Prevents repeating the image */
