--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Data/css/stylesindex.css">
     <style>
         body {
-            background-image: url('Data/Photos/Pngtree.jpg');
+            background-image: url('Data/Photos/Flower.jpg');
             background-size: 100%; /* Ensures the image covers the entire background */
             background-position: center; /* Centers the image */
             background-repeat: repeat; /* Prevents repeating the image */
@@ -33,7 +33,7 @@
             <button type="submit" class="start-btn">Login</button>
             <p id="loginSuccessMessage" style="display: none; color: green;">Login successful! Redirecting...</p>
             
-            <p>Username: Your email address <br>
+            <p>Username: Your gmail address <br>
             Password: Date when you said Your Sweet YES!</p>
 
         </form>
