--- a/page3.html
+++ b/page3.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy First Anniversary</title>
     <link rel="stylesheet" href="Data/css/stylepage3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
     <style>
         body {
-            background-image: url('Data/Photos/pinkbg.jpg');
+            background-image: url('Data/Photos/Flower.jpg');
             background-size: 100%; /* Ensures the image covers the entire background */
             background-position: center; /* Centers the image */
             background-repeat: repeat; /* Prevents repeating the image */
@@ -20,7 +23,7 @@
     <h1 class="main-heading">Happy 1st Anniversary love! ❤️</h1>
     
     <audio id="backgroundMusic" loop>
-        <source src="Data/music/Lil Eddie - Statue (Lyrics).mp3" type="audio/mpeg">
+        <source src="Data/music/blue.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <button id="musicButton">Play Music</button>
