--- a/page3.html
+++ b/page3.html
@@ -47,42 +47,42 @@
         <div class="card" onclick="openModal(1)">
             <img src="Data/Photos/1.jpg" alt="Image 3">
             <div class="card-text">
-                <h3>Cute</h3>
+                <h3>Coffee</h3>
             </div>
         </div>
 
         <div class="card" onclick="openModal(1)">
             <img src="Data/Photos/2.jpg" alt="Image 4">
             <div class="card-text">
-                <h3>Date</h3>
+                <h3>Your Smile</h3>
             </div>
         </div>
 
         <div class="card" onclick="openModal(1)">
             <img src="Data/Photos/MonthsaryGift.jpg" alt="Image 5">
             <div class="card-text">
-                <h3>MonthsaryGift</h3>
+                <h3>Monthsary Gift</h3>
             </div>
         </div>
 
         <div class="card" onclick="openModal(1)">
             <img src="Data/Photos/ColleenaBirthday.jpg" alt="Image 6">
             <div class="card-text">
-                <h3>ColleenaBirthday</h3>
+                <h3>Colleena's Birthday</h3>
             </div>
         </div>
 
         <div class="card" onclick="openModal(1)">
             <img src="Data/Photos/HEHE.jpg" alt="Image 7">
             <div class="card-text">
-                <h3>HEHE</h3>
+                <h3>SMILE!</h3>
             </div>
         </div>
 
         <div class="card" onclick="openModal(1)">
             <img src="Data/Photos/Couplebracelet.jpg" alt="Image 8">
             <div class="card-text">
-                <h3>Couple Bracelet</h3>
+                <h3>Couple Kin Bracelet</h3>
             </div>
         </div>
 
